--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,1 @@
-registry=http://npm.sudo.homedo.com/nexus/repository/npm-public/
+# registry=http://npm.sudo.homedo.com/nexus/repository/npm-public/
