--- a/package.json
+++ b/package.json
@@ -16,14 +16,8 @@
     "@vueuse/core": "4.9.0",
     "ant-design-vue": "2.1.2",
     "axios": "0.21.1",
-    "dayjs": "1.10.4",
-    "lodash": "4.17.21",
-    "md5": "2.3.0",
+    "homedo-utils": "latest",
     "mitt": "2.1.0",
-    "number-precision": "1.5.0",
-    "numbro": "2.3.2",
-    "rmb-x": "0.1.2",
-    "uuid": "8.3.2",
     "vue": "3.0.11",
     "vue-router": "4.0.6",
     "vuex": "4.0.0"
